--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Area Coverage Flight Path Generator</title>
-    <link rel="stylesheet" type="text/css" href="coverage.css">
+    <link rel="stylesheet" type="text/css" href="src/css/coverage.css">
 </head>
 
 <body>
@@ -125,15 +125,15 @@
     <script src="jquery-1.11.2.min.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyCPS20NagOhZRkVhyyNchxO6DkZ3zBq9Fg"></script>
-    <script src="DeleteMenu.js"></script>
+    <script src="./dist/DeleteMenu.js"></script>
     <!-- <script>
         var startLat = -7.915972873102972;
         var startLng = 110.56066997979453;
         var numAgents = 4;
     </script> -->
     <!-- <script src="script.js"></script> -->
-    <script src="generate.js"></script>
-    <script src="coverage.js"></script>
+    <script src="./dist/generate.js"></script>
+    <script src="./dist/coverage.js"></script>
 </body>
 
 </html>
